Set dev mode default to true

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 GROQ_API_KEY=your_groq_api_key
 APP_KEY=your_app_key
-# Set to true to skip header verification
-DEV_MODE=false
+# Development mode is enabled by default.
+# Set to false to require the x-app-key header in production.
+DEV_MODE=true
